--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="title_nav_view_size">30sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
