--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,7 +32,7 @@
     </style>
 
     <style name="RestaurantName" parent="RestaurantAddress">
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -49,17 +49,17 @@
     <!--    Restaurant detail-->
     <style name="RestaurantNameDetail" parent="RestaurantName">
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">22dp</item>
+        <item name="android:textSize">22sp</item>
     </style>
 
     <style name="RestaurantAddressDetail" parent="RestaurantAddress">
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <!--    Restaurant icon-->
     <style name="RestaurantIcon" parent="Widget.AppCompat.TextView">
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/orange</item>
     </style>
@@ -67,6 +67,18 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <!-- Header navigationView -->
+    <style name="HeaderNavigationViewName" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="HeaderNavigationViewEmail" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -88,6 +100,6 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:textColorHint">@android:color/darker_gray</item>
-        <item name="android:windowBackground">@drawable/background_authentication</item>
+        <item name="android:windowBackground">@drawable/login_background</item>
     </style>
 </resources>
