--- a/app/src/main/res/layout/fragment_workmate.xml
+++ b/app/src/main/res/layout/fragment_workmate.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.workmate.WorkmateFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_workmate_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="8dp"
-        tools:listitem="@layout/item_workmate"/>
+        tools:listitem="@layout/item_workmate"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
