--- a/app/src/main/res/layout/item_workmate.xml
+++ b/app/src/main/res/layout/item_workmate.xml
@@ -3,25 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/item_workmate_image"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/item_workmate_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@id/item_workmate_image"
         app:layout_constraintTop_toTopOf="@id/item_workmate_image"
         app:layout_constraintBottom_toBottomOf="@id/item_workmate_image"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:text="Test"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
