--- a/app/src/main/res/layout/item_workmate_restaurant_detail.xml
+++ b/app/src/main/res/layout/item_workmate_restaurant_detail.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -9,7 +10,6 @@
         android:id="@+id/item_workmate_restaurant_detail_image"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginVertical="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars"
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/item_workmate_restaurant_detail_textview"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textSize="16sp"
@@ -25,6 +25,7 @@
         tools:text="Workmate is joining!"
         app:layout_constraintStart_toEndOf="@id/item_workmate_restaurant_detail_image"
         app:layout_constraintTop_toTopOf="@id/item_workmate_restaurant_detail_image"
-        app:layout_constraintBottom_toBottomOf="@id/item_workmate_restaurant_detail_image"/>
+        app:layout_constraintBottom_toBottomOf="@id/item_workmate_restaurant_detail_image"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
