--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,9 @@
     <color name="yellow">#FFEB3B</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#757575</color>
+
+    // --- COLOR FOR OPEN STATUS ---
+    <color name="opened">#FF000000</color>
+    <color name="closed">#F44336</color>
 </resources>
